introduce TeacherClass model in teacher app to represent a specific offering of a particular course by a specific teacher; add API access to all teacher app models; simple clients can list current classes for a teacher as well as recent learning objectives for a specific course offering

--- a/src/edurepo/teachers/templates/teachers/entries.html
+++ b/src/edurepo/teachers/templates/teachers/entries.html
@@ -5,12 +5,13 @@
 </head>
 <body>
 {% if entry_list %}
+    <p>Calendar entries for {{ class_name }} taught by {{ teacher_email }}:</p>
 {% for e in entry_list %}
     <li>{{ e.objective }} ({{ e.date }})</li>
 {% endfor %}
 </ul>
 {% else %}
-<p>No calendar entries for teacher {{ teacher_id }}!</p>
+<p>No calendar entries for {{ class_name }} taught by {{ teacher_email }}!</p>
 {% endif %}
 </body>
 </html>
