--- a/src/webapp/css/app.css
+++ b/src/webapp/css/app.css
@@ -1,6 +1,28 @@
 /* app css stylesheet */
 
 body {
-  padding-top: 20px;
+    padding: 20px;
+
+    font-family: Arial, Verdana, sans-serif;
+    font-size: 12px;
 }
 
+ul {
+    margin-left: 0px;
+}
+
+li {
+    list-style: none;
+}
+
+.emailInput {
+    background-color: rgb(155, 240, 242);
+}
+
+.classDisplay {
+    background-color: rgb(106, 237, 231);
+}
+
+.objectiveDisplay {
+    background-color: rgb(12, 226, 219);
+}
