use relative URLs to survive change in context root (doh)

--- a/src/edurepo/repo/templates/repo/index.html
+++ b/src/edurepo/repo/templates/repo/index.html
@@ -7,7 +7,7 @@
 <ul>
 {% if course_list %}
 {% for c in course_list %}
-    <li><a href="/repo/{{ c.id }}/">{{ c.description }}</a></li>
+    <li><a href="{{ c.id }}/">{{ c.description }}</a></li>
 {% endfor %}
 </ul>
 {% else %}
