--- a/src/edurepo/repo/templates/repo/course.html
+++ b/src/edurepo/repo/templates/repo/course.html
@@ -6,7 +6,7 @@
 <body>
 <ul>
 {% for lo in objective_list %}
-    <li><a href="/repo/{{ course_id }}/{{ lo.id }}/">{{ lo.formal_description }}</a></li>
+    <li><a href="{{ lo.id }}/">{{ lo.formal_description }}</a></li>
 {% endfor %}
 </ul>
 </body>
