--- a/src/edurepo/teachers/templates/teachers/index.html
+++ b/src/edurepo/teachers/templates/teachers/index.html
@@ -7,7 +7,7 @@
 <ul>
 {% if teacher_list %}
 {% for t in teacher_list %}
-    <li><a href="/teachers/{{ t.email }}/">{{ t.name }}</a></li>
+    <li><a href="{{ t.email }}/">{{ t.name }}</a></li>
 {% endfor %}
 </ul>
 {% else %}
