--- a/src/edurepo/teachers/templates/teachers/classes.html
+++ b/src/edurepo/teachers/templates/teachers/classes.html
@@ -8,7 +8,7 @@
     <p>Classes for teacher {{ teacher_email }}:</p>
     <ul>
 {% for c in teacher_class_list %}
-        <li><a href="/teachers/{{ teacher_email }}/{{ c.name }}/">{{ c.name }}</a></li>
+        <li><a href="{{ c.name }}/">{{ c.name }}</a></li>
 {% endfor %}
     </ul>
 {% else %}
