--- a/src/edurepo/resources/templates/resources/index.html
+++ b/src/edurepo/resources/templates/resources/index.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title></title>
+    <title>External resources</title>
 </head>
 <body>
+    <h1>List of external resources</h1>
 {% if resource_list %}
     <ul>
 {% for r in resource_list %}
-        <li><a href="{{ r.id }}/">{{ r.url }}</a></li>
+        <li><a href="{{ r.id }}/">{{ r.url }}</a> ({{ r.objective }})</li>
 {% endfor %}
     </ul>
 {% else %}
