explain the different apps

--- a/src/edurepo/templates/index.html
+++ b/src/edurepo/templates/index.html
@@ -7,9 +7,18 @@
     <h1>Edjective.org reference views</h1>
 
     <ul>
-        <li><a href="repo/">Repository data</a></li>
-        <li><a href="resources/">External resources for learning objectives</a></li>
-        <li><a href="teachers/">Teachers</a></li>
+        <li><a href="repo/">Repository data</a>
+            <br />
+            <em>Course definitions and educational materials</em>
+        </li>
+        <li><a href="resources/">External resources for learning objectives</a>
+            <br />
+            <em>Resources on other web sites which are related to a learning objective</em>
+        </li>
+        <li><a href="teachers/">Teachers</a>
+            <br />
+            <em>Teachers who are using this system to keep a calendar of learning objectives</em>
+        </li>
     </ul>
 </body>
 </html>
