--- a/src/edurepo/teachers/templates/teachers/classes.html
+++ b/src/edurepo/teachers/templates/teachers/classes.html
@@ -2,6 +2,7 @@
 <html>
 <head>
     <title>{{ teacher.name }}'s Classes</title>
+    <link rel="stylesheet" type="text/css" href="/static/css/styles.css">
 </head>
 <body>
 {% if teacher_class_list %}
@@ -14,5 +15,10 @@
 {% else %}
     <p>No classes defined for {{ teacher}}!</p>
 {% endif %}
+
+    <div class="ui-warning">
+        <p>Important: These pages are <q>reference views</q> for verifying data in the
+        system; they are not intended for end users.</p>
+    </div>
 </body>
 </html>
