--- a/src/edurepo/repo/templates/repo/course.html
+++ b/src/edurepo/repo/templates/repo/course.html
@@ -2,6 +2,7 @@
 <html>
 <head>
     <title>Objective listing for course {{ course_id }}</title>
+    <link rel="stylesheet" type="text/css" href="/static/css/styles.css">
 </head>
 <body>
 {% if objective_list %}
@@ -15,5 +16,10 @@
 {% else %}
     <p>No objectives are defined for course {{ course_id }}!</p>
 {% endif %}
+
+    <div class="ui-warning">
+        <p>Important: These pages are <q>reference views</q> for verifying data in the
+        system; they are not intended for end users.</p>
+    </div>
 </body>
 </html>
