--- a/src/edurepo/repo/templates/repo/objective.html
+++ b/src/edurepo/repo/templates/repo/objective.html
@@ -2,6 +2,7 @@
 <html>
 <head>
     <title>Objective {{ objective_id }}</title>
+    <link rel="stylesheet" type="text/css" href="/static/css/styles.css">
 </head>
 <body>
     <h1>Course {{ course_id }}, objective {{ objective_id }}</h1>
@@ -79,5 +80,10 @@
     {% else %}
     <p>No true/false questions are available.</p>
     {% endif %}
+
+    <div class="ui-warning">
+        <p>Important: These pages are <q>reference views</q> for verifying data in the
+        system; they are not intended for end users.</p>
+    </div>
 </body>
 </html>
