--- a/src/edurepo/resources/templates/resources/index.html
+++ b/src/edurepo/resources/templates/resources/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
     <title>External resources</title>
+    <link rel="stylesheet" type="text/css" href="/static/css/styles.css">
 </head>
 <body>
     <h1>List of external resources</h1>
@@ -14,5 +15,10 @@
 {% else %}
     <p>No resources defined!</p>
 {% endif %}
+
+    <div class="ui-warning">
+        <p>Important: These pages are <q>reference views</q> for verifying data in the
+        system; they are not intended for end users.</p>
+    </div>
 </body>
 </html>
