--- a/src/edurepo/resources/templates/resources/resource.html
+++ b/src/edurepo/resources/templates/resources/resource.html
@@ -2,6 +2,7 @@
 <html>
 <head>
     <title>{{ resource.objective }} resource</title>
+    <link rel="stylesheet" type="text/css" href="/static/css/styles.css">
 </head>
 <body>
     <h1>External resource for {{ resource.objective }}</h1>
@@ -15,5 +16,9 @@
         <tr><td>Votes in favor: {{ resource.votes }}</td></tr>
     </table>
 
+    <div class="ui-warning">
+        <p>Important: These pages are <q>reference views</q> for verifying data in the
+        system; they are not intended for end users.</p>
+    </div>
 </body>
 </html>
