--- a/src/edurepo/templates/index.html
+++ b/src/edurepo/templates/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
     <title>Edjective.org reference views</title>
+    <link rel="stylesheet" type="text/css" href="/static/css/styles.css">
 </head>
 <body>
     <h1>Edjective.org reference views</h1>
@@ -20,5 +21,10 @@
             <em>Teachers who are using this system to keep a calendar of learning objectives</em>
         </li>
     </ul>
+
+    <div class="ui-warning">
+        <p>Important: These pages are <q>reference views</q> for verifying data in the
+        system; they are not intended for end users.</p>
+    </div>
 </body>
 </html>
