implement social login via Google OpenID provider

--- a/src/edurepo/templates/index.html
+++ b/src/edurepo/templates/index.html
@@ -5,6 +5,16 @@
     <link rel="stylesheet" type="text/css" href="/static/css/styles.css">
 </head>
 <body>
+    {% if not user.is_authenticated %}
+    <p><a href="login/google/?next=/">Login with a Google account</a></p>
+    {% endif %}
+    {% if user %}
+    {% for assoc in backends.associated %}
+    <p>You are logged in as <strong>{{ user.username}}</strong> via <strong>{{ assoc.provider }}</strong>.
+        (<a href="logout/?next=/">Logout</a>)</p>
+    {% endfor %}
+    {% endif %}
+
     <h1>Edjective.org reference views</h1>
 
     <ul>
