display course category on course reference view

--- a/src/edurepo/repo/templates/repo/index.html
+++ b/src/edurepo/repo/templates/repo/index.html
@@ -8,9 +8,9 @@
 {% if course_list %}
     <h1>List of courses</h1>
     <table border="1">
-        <tr><th>Course id</th><th>Course description</th><th>Language</th></tr>
+        <tr><th>Category</th><th>Course id</th><th>Course description</th><th>Language</th></tr>
 {% for c in course_list %}
-        <tr><td><a href="{{ c.id }}/">{{ c.id }}</a></td><td>{{ c.description }}</td><td>{{ c.language }}</td></tr>
+        <tr><td>{{ c.cat.id }}</td><td><a href="{{ c.id }}/">{{ c.id }}</a></td><td>{{ c.description }}</td><td>{{ c.language }}</td></tr>
 {% endfor %}
     </table>
 {% else %}
