--- a/src/edurepo/resources/templates/resources/create_resource.html
+++ b/src/edurepo/resources/templates/resources/create_resource.html
@@ -1,15 +1,16 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title></title>
+    <title>Submit a resource</title>
 </head>
 <body>
+    <h1>Submit a resource</h1>
     <form action="{% url 'resources.views.create_resource' %}" method="post">
         {% csrf_token %}
         <ul>
             {{ form.as_ul }}
         </ul>
-        <input type="submit" name="submit" value="Submit Resource">
+        <input type="submit" name="submit" value="Submit">
     </form>
 </body>
 </html>
