--- a/src/edurepo/resources/templates/resources/create_resource.html
+++ b/src/edurepo/resources/templates/resources/create_resource.html
@@ -7,9 +7,7 @@
     <h1>Submit a resource</h1>
     <form action="{% url 'resources.views.create_resource' %}" method="post">
         {% csrf_token %}
-        <ul>
-            {{ form.as_ul }}
-        </ul>
+        {{ form.as_p }}
         <input type="submit" name="submit" value="Submit">
     </form>
 </body>
