--- a/src/edurepo/repo/templates/repo/objective.html
+++ b/src/edurepo/repo/templates/repo/objective.html
@@ -7,11 +7,7 @@
 <body>
     <h1>Course {{ course_id }}, objective {{ objective_id }}</h1>
 
-    <p>{{ objective.formal_description }}</p>
-
-    {% if objective.simple_description %}
-    <p>Simple description: {{ objective.simple_description }}</p>
-    {%  endif %}
+    <p>{{ objective.description }}</p>
 
     {% if reference_text %}
     <h2>Reference text</h2>
