--- a/src/webapp/css/app.css
+++ b/src/webapp/css/app.css
@@ -109,6 +109,15 @@ ul.objective-list > li {
     padding-bottom: 10px;
 }
 
+.previous-next-objective {
+    border-radius: 2px;
+    background-color: #3B653D;
+    color: white;
+    font-family: "Comic Sans MS", cursive, sans-serif;
+    font-size: 75%;
+    padding: 2px;
+}
+
 .objective-list-entry-id {
     border-radius: 5px;
     background-color: #3B653D;
