--- a/src/webapp/css/app.css
+++ b/src/webapp/css/app.css
@@ -134,3 +134,15 @@ ul.objective-list > li {
     padding-top: 5px;
     margin-top: 5px;
 }
+
+.edjective-warning {
+    font-size: 100%;
+    color: white;
+    background-color: rgba(255, 5, 14, 0.67);
+    width: 40%;
+    margin: 20px;
+    padding-left: 10px;
+    padding-right: 10px;
+    padding-top: 3px;
+    padding-bottom: 3px;
+}
