Put notice on resource submission form that resources can be removed later based on availability and appropriateness

--- a/src/edurepo/resources/templates/resources/create_resource.html
+++ b/src/edurepo/resources/templates/resources/create_resource.html
@@ -2,6 +2,7 @@
 <html>
 <head>
     <title>Submit a resource</title>
+    <link rel="stylesheet" type="text/css" href="/static/css/styles.css">
 </head>
 <body>
     <h1>Submit a resource</h1>
@@ -10,5 +11,9 @@
         {{ form.as_p }}
         <input type="submit" name="submit" value="Submit">
     </form>
+
+    <p class="ui-warning">Important note: Resources are subject to removal
+    later if they are unreachable for a period of time or are judged to be
+    inappropriate.</p>
 </body>
 </html>
