--- a/src/edurepo/resources/templates/resources/comment.html
+++ b/src/edurepo/resources/templates/resources/comment.html
@@ -1,15 +1,25 @@
+{% load bootstrap3 %}
 <!DOCTYPE html>
 <html>
 <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Comment on a resource</title>
     <link rel="stylesheet" type="text/css" href="/static/css/styles.css">
+    {% bootstrap_css %}
+    {% bootstrap_javascript %}
 </head>
 <body>
     <h1>Comment on a resource</h1>
     <form action="{% url 'resources.views.comment_on_resource' %}" method="post">
         {% csrf_token %}
-        {{ form.as_p }}
-        <input type="submit" name="submit" value="Submit">
+        {% bootstrap_form form %}
+        {% buttons %}
+            <button type="submit" class="btn btn-primary">
+            {% bootstrap_icon "star" %} Submit
+            </button>
+        {% endbuttons %}
     </form>
 
     <p class="ui-warning">Important note: Resources which are flagged as
