--- a/src/edurepo/teachers/templates/teachers/index.html
+++ b/src/edurepo/teachers/templates/teachers/index.html
@@ -1,8 +1,14 @@
+{% load bootstrap3 %}
 <!DOCTYPE html>
 <html>
 <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Teachers</title>
     <link rel="stylesheet" type="text/css" href="/static/css/styles.css">
+    {% bootstrap_css %}
+    {% bootstrap_javascript %}
 </head>
 <body>
     {% if teacher_list %}
