--- a/src/edurepo/teachers/templates/teachers/register_teacher.html
+++ b/src/edurepo/teachers/templates/teachers/register_teacher.html
@@ -1,15 +1,25 @@
+{% load bootstrap3 %}
 <!DOCTYPE html>
 <html>
 <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Register as a teacher</title>
     <link rel="stylesheet" type="text/css" href="/static/css/styles.css">
+    {% bootstrap_css %}
+    {% bootstrap_javascript %}
 </head>
 <body>
     <h1>Register as a teacher</h1>
     <form action="{% url 'teachers.views.register_teacher' %}" method="post">
         {% csrf_token %}
-        {{ form.as_p }}
-        <input type="submit" name="submit" value="Submit">
+        {% bootstrap_form form %}
+        {% buttons %}
+            <button type="submit" class="btn btn-primary">
+            {% bootstrap_icon "star" %} Submit
+            </button>
+        {% endbuttons %}
     </form>
 </body>
 </html>
