--- a/src/edurepo/templates/index.html
+++ b/src/edurepo/templates/index.html
@@ -8,19 +8,27 @@
     <title>Edjective.org reference views</title>
     <link rel="stylesheet" type="text/css" href="/static/css/styles.css">
     {% bootstrap_css %}
-    {% bootstrap_javascript %}
+    {% bootstrap_javascript True %}
 </head>
 <body>
     {% url 'index' as root_url %}
-    {% if not user.is_authenticated %}
-    <p><a href="login/google/?next={{ root_url }}">Login with a Google account</a></p>
-    {% endif %}
-    {% if user %}
-    {% for assoc in backends.associated %}
-    <p>You are logged in as <strong>{{ user.username}}</strong> via <strong>{{ assoc.provider }}</strong>.
-        (<a href="logout/?next={{ root_url }}">Logout</a>)</p>
-    {% endfor %}
-    {% endif %}
+    <div class="container">
+        <div class="navbar navbar-default" data-role="navigation">
+            <ul class="nav navbar-nav">
+                <li><a href="{% url 'top.index' %}">Home</a></li>
+                <li><a href="{% url 'repo.index' %}">Course and objective definitions</a></li>
+                <li><a href="{% url 'resources.index' %}">Web resources</a></li>
+                <li><a href="{% url 'teachers.index' %}">Teachers and classes</a></li>
+                {% if not user.is_authenticated %}
+                <li><a href="{% url 'social:begin' 'google' %}?next={% url 'top.index' %}">Login with a Google account</a></li>
+                {% endif %}
+                {% if user %}
+                {% for assoc in backends.associated %}
+                <li><a href="{% url 'logout' %}?next={% url 'top.index' %}">Logout <strong>{{ user.username}}</strong> via <strong>{{ assoc.provider }}</strong></a></li>
+                {% endfor %}
+                {% endif %}
+            </ul>
+        </div>
 
     <h1>Edjective.org reference views</h1>
 
@@ -42,6 +50,7 @@
     <div class="ui-warning">
         <p>Important: These pages are <q>reference views</q> for verifying data in the
         system; they are not intended for end users.</p>
+    </div>
     </div>
 </body>
 </html>
