--- a/src/edurepo/resources/templates/resources/comment.html
+++ b/src/edurepo/resources/templates/resources/comment.html
@@ -1,16 +1,7 @@
+{% extends "base.html" %}
 {% load bootstrap3 %}
-<!DOCTYPE html>
-<html>
-<head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Comment on a resource</title>
-    <link rel="stylesheet" type="text/css" href="/static/css/styles.css">
-    {% bootstrap_css %}
-    {% bootstrap_javascript %}
-</head>
-<body>
+{% block title %}Comment on a resource{% endblock %}
+{% block content %}
     <h1>Comment on a resource</h1>
     <form action="{% url 'resources.views.comment_on_resource' %}" method="post">
         {% csrf_token %}
@@ -24,5 +15,4 @@
 
     <p class="ui-warning">Important note: Resources which are flagged as
     inappropriate will be visible until they can be reviewed.</p>
-</body>
-</html>
+{% endblock %}
