--- a/src/edurepo/resources/templates/resources/index.html
+++ b/src/edurepo/resources/templates/resources/index.html
@@ -1,30 +1,19 @@
-{% load bootstrap3 %}
-<!DOCTYPE html>
-<html>
-<head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>External resources</title>
-    <link rel="stylesheet" type="text/css" href="/static/css/styles.css">
-    {% bootstrap_css %}
-    {% bootstrap_javascript %}
-</head>
-<body>
+{% extends "base.html" %}
+{% block title %}External listing{% endblock %}
+{% block content %}
     <h1>List of external resources</h1>
-{% if resource_list %}
+    {% if resource_list %}
     <ul>
-{% for r in resource_list %}
+        {% for r in resource_list %}
         <li><a href="{{ r.id }}/">{{ r.url }}</a> ({{ r.objective }})</li>
-{% endfor %}
+        {% endfor %}
     </ul>
-{% else %}
+    {% else %}
     <p>No resources defined!</p>
-{% endif %}
+    {% endif %}
 
     <div class="ui-warning">
         <p>Important: These pages are <q>reference views</q> for verifying data in the
         system; they are not intended for end users.</p>
     </div>
-</body>
-</html>
+{% endblock %}
