--- a/src/edurepo/teachers/templates/teachers/add_class.html
+++ b/src/edurepo/teachers/templates/teachers/add_class.html
@@ -1,16 +1,7 @@
+{% extends "base.html" %}
 {% load bootstrap3 %}
-<!DOCTYPE html>
-<html>
-<head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Add a class</title>
-    <link rel="stylesheet" type="text/css" href="/static/css/styles.css">
-    {% bootstrap_css %}
-    {% bootstrap_javascript %}
-</head>
-<body>
+{% block title %}Add a class{% endblock %}
+{% block content %}
     <h1>Add a class</h1>
     <form action="{% url 'teachers.views.add_class' teacher_email=teacher_email%}" method="post">
         {% csrf_token %}
@@ -21,5 +12,4 @@
             </button>
         {% endbuttons %}
     </form>
-</body>
-</html>
+{% endblock %}
