--- a/src/edurepo/teachers/templates/teachers/entries.html
+++ b/src/edurepo/teachers/templates/teachers/entries.html
@@ -1,16 +1,6 @@
-{% load bootstrap3 %}
-<!DOCTYPE html>
-<html>
-<head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>{{ class_name }} objectives</title>
-    <link rel="stylesheet" type="text/css" href="/static/css/styles.css">
-    {% bootstrap_css %}
-    {% bootstrap_javascript %}
-</head>
-<body>
+{% extends "base.html" %}
+{% block title %}{{ class_name }} objectives{% endblock %}
+{% block content %}
 {% if entry_list %}
     <p>Calendar entries for {{ class_name }} taught by {{ teacher }}:</p>
     <dl>
@@ -31,5 +21,4 @@
         <p>Important: These pages are <q>reference views</q> for verifying data in the
         system; they are not intended for end users.</p>
     </div>
-</body>
-</html>
+{% endblock %}
