--- a/src/edurepo/teachers/templates/teachers/index.html
+++ b/src/edurepo/teachers/templates/teachers/index.html
@@ -1,16 +1,6 @@
-{% load bootstrap3 %}
-<!DOCTYPE html>
-<html>
-<head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Teachers</title>
-    <link rel="stylesheet" type="text/css" href="/static/css/styles.css">
-    {% bootstrap_css %}
-    {% bootstrap_javascript %}
-</head>
-<body>
+{% extends "base.html" %}
+{% block title %}Teachers{% endblock %}
+{% block content %}
     {% if teacher_list %}
     <h1>List of teachers</h1>
     <ul>
@@ -26,5 +16,4 @@
         <p>Important: These pages are <q>reference views</q> for verifying data in the
         system; they are not intended for end users.</p>
     </div>
-</body>
-</html>
+{% endblock %}
