--- a/src/edurepo/templates/index.html
+++ b/src/edurepo/templates/index.html
@@ -1,37 +1,7 @@
-{% load bootstrap3 %}
-<!DOCTYPE html>
-<html>
-<head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Edjective.org reference views</title>
-    <link rel="stylesheet" type="text/css" href="/static/css/styles.css">
-    {% bootstrap_css %}
-    {% bootstrap_javascript True %}
-</head>
-<body>
-    {% url 'index' as root_url %}
-    <div class="container">
-        <div class="navbar navbar-default" data-role="navigation">
-            <ul class="nav navbar-nav">
-                <li><a href="{% url 'top.index' %}">Home</a></li>
-                <li><a href="{% url 'repo.index' %}">Course and objective definitions</a></li>
-                <li><a href="{% url 'resources.index' %}">Web resources</a></li>
-                <li><a href="{% url 'teachers.index' %}">Teachers and classes</a></li>
-                {% if not user.is_authenticated %}
-                <li><a href="{% url 'social:begin' 'google' %}?next={% url 'top.index' %}">Login with a Google account</a></li>
-                {% endif %}
-                {% if user %}
-                {% for assoc in backends.associated %}
-                <li><a href="{% url 'logout' %}?next={% url 'top.index' %}">Logout <strong>{{ user.username}}</strong> via <strong>{{ assoc.provider }}</strong></a></li>
-                {% endfor %}
-                {% endif %}
-            </ul>
-        </div>
-
+{% extends "base.html" %}
+{% block title %}Edjective.org reference views{% endblock %}
+{% block content %}
     <h1>Edjective.org reference views</h1>
-
     <ul>
         <li><a href="repo/">Repository data</a>
             <br />
@@ -51,6 +21,4 @@
         <p>Important: These pages are <q>reference views</q> for verifying data in the
         system; they are not intended for end users.</p>
     </div>
-    </div>
-</body>
-</html>
+{% endblock %}
