--- a/src/edurepo/resources/templates/resources/comment.html
+++ b/src/edurepo/resources/templates/resources/comment.html
@@ -13,6 +13,6 @@
         {% endbuttons %}
     </form>
 
-    <p class="ui-warning">Important note: Resources which are flagged as
+    <p class="text-warning">Important note: Resources which are flagged as
     inappropriate will be visible until they can be reviewed.</p>
 {% endblock %}
