--- a/src/edurepo/resources/templates/resources/create_resource.html
+++ b/src/edurepo/resources/templates/resources/create_resource.html
@@ -13,7 +13,7 @@
         {% endbuttons %}
     </form>
 
-    <p class="ui-warning">Important note: Resources are subject to removal
+    <p class="text-warning">Important note: Resources are subject to removal
     later if they are unreachable for a period of time or are judged to be
     inappropriate.</p>
 {% endblock %}
