--- a/src/edurepo/templates/index.html
+++ b/src/edurepo/templates/index.html
@@ -17,7 +17,7 @@
         </li>
     </ul>
 
-    <div class="ui-warning">
+    <div class="text-warning">
         <p>Important: These pages are <q>reference views</q> for verifying data in the
         system; they are not intended for end users.</p>
     </div>
