--- a/src/edurepo/resources/templates/resources/index.html
+++ b/src/edurepo/resources/templates/resources/index.html
@@ -12,7 +12,7 @@
     <p>No resources defined!</p>
     {% endif %}
 
-    <div class="ui-warning">
+    <div class="text-warning">
         <p>Important: These pages are <q>reference views</q> for verifying data in the
         system; they are not intended for end users.</p>
     </div>
