--- a/src/edurepo/resources/templates/resources/resource.html
+++ b/src/edurepo/resources/templates/resources/resource.html
@@ -3,7 +3,7 @@
 {% block content %}
     <h1>Web resource for {{ resource.objective }}</h1>
 
-    <table border="1">
+    <table class="table table-striped">
         <tr><td><a href="{{ resource.url }}">{{ resource.url }}</a></td></tr>
         <tr><td>Added at {{ resource.when_added }}</td></tr>
         {% if resource.notes %}
@@ -22,7 +22,7 @@
     </ul>
     {% endif %}
 
-    <div class="ui-warning">
+    <div class="text-warning">
         <p>Important: These pages are <q>reference views</q> for verifying data in the
         system; they are not intended for end users.</p>
     </div>
