--- a/src/edurepo/teachers/templates/teachers/classes.html
+++ b/src/edurepo/teachers/templates/teachers/classes.html
@@ -12,7 +12,7 @@
     <p>No classes defined for {{ teacher}}!</p>
 {% endif %}
 
-    <div class="ui-warning">
+    <div class="text-warning">
         <p>Important: These pages are <q>reference views</q> for verifying data in the
         system; they are not intended for end users.</p>
     </div>
