axe stray </ul>, fix indentation and tweak wording

--- a/src/edurepo/resources/templates/resources/resource.html
+++ b/src/edurepo/resources/templates/resources/resource.html
@@ -14,18 +14,17 @@
     </table>
 
     {% if comments %}
-    <p>Comments on this resource:</p>
+        <p>Comments:</p>
         {% for comment in comments %}
             <blockquote>
-            {% if comment.type == 'v' %}
-            <p class="bg-success">{{ comment.comment }}</p>
-            {% else %}
-            <p class="bg-danger">{{ comment.comment }}</p>
-            {% endif %}
-            <small>{{ comment.when|date:"F j, Y" }}</small>
+                {% if comment.type == 'v' %}
+                    <p class="bg-success">{{ comment.comment }}</p>
+                {% else %}
+                    <p class="bg-danger">{{ comment.comment }}</p>
+                {% endif %}
+                <small>{{ comment.when|date:"F j, Y" }}</small>
             </blockquote>
         {% endfor %}
-    </ul>
     {% endif %}
 
     <div class="text-warning">
