--- a/src/edurepo/repo/templates/repo/course.html
+++ b/src/edurepo/repo/templates/repo/course.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% block title %}Objective listing for course {{ course_id }}{% endblock %}
 {% block content %}
-    <div class="jumbotron">
+    <div class="well">
     <h1>Course {{ course_id }}</h1>
     <p>{{ course.description }}</p>
     </div>
