--- a/src/edurepo/repo/templates/repo/objective.html
+++ b/src/edurepo/repo/templates/repo/objective.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% block title %}Objective {{ objective_id }}{% endblock %}
 {% block content %}
-    <div class="jumbotron">
+    <div class="well">
         <h1>{{ course_id }}</h1>
         <h2>Objective {{ objective_id }}</h2>
         <p>{{ objective.description }}</p>
