--- a/src/edurepo/templates/base.html
+++ b/src/edurepo/templates/base.html
@@ -18,6 +18,15 @@
                     <li><a href="{% url 'repo.index' %}">Course and objective definitions</a></li>
                     <li><a href="{% url 'resources.index' %}">Web resources</a></li>
                     <li><a href="{% url 'teachers.index' %}">Teachers and classes</a></li>
+                    {% if dashboard_emails %}
+                    <li class="dropdown">
+                    <a href="#" class="dropdown-toggle" data-toggle="dropdown">Dashboards <b class="caret"></b></a>
+                    <ul class="dropdown-menu">
+                    {% for de in dashboard_emails %}
+                    <li><a href="{% url 'teachers.views.dashboard' teacher_email=de %}">{{ de }}</a></li>
+                    {% endfor %}
+                    </ul>
+                    {% endif %}
                     {% if not user.is_authenticated %}
                     <li><a href="{% url 'social:begin' 'google' %}?next={% url 'top.index' %}">Login with a Google account</a></li>
                     {% endif %}
